[gd_scene load_steps=9 format=2]

[ext_resource path="res://Load.gd" type="Script" id=1]
[ext_resource path="res://Materials/Red.tres" type="Material" id=2]
[ext_resource path="res://Materials/Green.tres" type="Material" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SphereShape" id=5]
radius = 0.116291

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.893784, 1.42873, 1.65427 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.639673, 1.59932, 1.55427 )

[node name="Load" type="Spatial"]
transform = Transform( 0.20486, 0, 0, 0, 0.0962749, 0, 0, 0, 0.249055, 0, 0, 0 )
script = ExtResource( 1 )

[node name="AttachPoint" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.29481, 0 )
mass = 200.0

[node name="MeshInstance" type="MeshInstance" parent="AttachPoint"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="AttachJoint" type="PinJoint" parent="AttachPoint"]
nodes/node_a = NodePath("../../RigidBody")
nodes/node_b = NodePath("..")

[node name="CollisionShape" type="CollisionShape" parent="AttachPoint"]
shape = SubResource( 5 )

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.83114, 0.00439891, 0, 0 )
mass = 1000.0

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
transform = Transform( 0.772313, 0, 0, 0, 0.772313, 0, 0, 0, 0.772313, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody/CollisionShape"]
transform = Transform( 1.1034, 0, 0, 0, 1.41584, 0, 0, 0, 1.66151, 0, 0.0577109, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Area" type="Area" parent="RigidBody"]
transform = Transform( 1.81344, 0, 0, 0, 0.625189, 0, 0, 0, 1.08438, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody/Area"]
transform = Transform( 3.05822, 0, 0, 0, 1.26231, 0, 0, 0, 2.1666, 0, 0.309131, 0 )
shape = SubResource( 3 )

[connection signal="body_entered" from="RigidBody/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="RigidBody/Area" to="." method="_on_Area_body_exited"]
